# Cloudity

./: .env  .env.example  .gitguardian.yaml  .gitignore  .gitleaks.toml  .gosec.json  BACKLOG.md  MAKEFILE-GUIDE.md  Makefile  PlanImplementation.md  README.md  ROADMAP.md  STATUS.md  TESTS.md  TODOS.md  docker-compose.dev.yml  docker-compose.https.yml  docker-compose.preprod.yml  docker-compose.prod.yml  docker-compose.security.yml  docker-compose.services.yml  docker-compose.yml  export-brave-favoris.py  go.work  go.work.sum  guide-makefiles-cloudity.md  profiling-data.27-02-2026.01-40-21.json  test.html  tree.txt
backend/: .dockerignore  Dockerfile.go-service  Makefile
backend/alias-service/: Cargo.toml  Dockerfile.dev  Makefile
backend/alias-service/src/: main.rs
backend/alias-service/src/handlers/: alias.rs
backend/alias-service/src/models/: alias.rs
backend/alias-service/src/services/: generator.rs
backend/email-service/: Cargo.toml  Dockerfile  Makefile
backend/email-service/src/: main.rs
backend/password-service/: Cargo.toml  Dockerfile  Dockerfile.dev  Makefile
backend/password-service/src/: main.rs
backend/password-service/src/crypto/: encryption.rs  key_derivation.rs  mod.rs
backend/password-service/src/handlers/: password.rs
backend/password-service/src/models/: password.rs
backend/password-service/src/services/: encryption.rs  password.rs
docs/: ARCHITECTURE-FRONTENDS.md  BACKEND-LAYOUT.md  BRANCHES.md  DEV-VERIFICATION.md  DEVELOPMENT-HOST.md  EVOLUTION-PLATEFORME.md  FRONTEND-LAYOUT.md  GIT.md  INSTRUCTIONS-IA.md  LOGS.md  MOBILES.md  MTLS-INTERNE.md  MULTI-REPO-LAYOUT.md  MULTI-REPO-QUESTIONNAIRE.md  PASS-CRYPTO.md  PERFORMANCES.md  PHOTOS.md  PLAN.md  PlanImplementation.md  README.md  REVERSE-PROXY.md  ROADMAP.md  SECURITE-DONNEES.md  SECURITE.md  SYNC-BACKLOG.md  TESTS.md  TODO.md  VISION-SUITE.md  editeur-docs.md  onlyoffice.md
extensions/: README.md
frontend/: Makefile  Makefile.old  docker-compose.yml  package-lock.json  package.json
infrastructure/: Makefile  Makefile.old
makefiles/: admin.mk  api.mk  backend.mk  config.mk  frontend.mk  infra.mk  services.mk  stacks.mk  tools.mk
mobile/: Makefile  README.md
scripts/: README.md  build.sh  check-flutter-sdk-writable.sh  colors.mk  create-future-services.sh  database.sh  demo-makefile.sh  diagnose.sh  feature-finish.sh  (+22 more)
(+1219 files in other folders)
