[package]
name = "email-service"
version = "0.1.0"
edition = "2021"

# Fix pour Cargo lock version 4 -> utiliser toolchain stable
rust-version = "1.70.0"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Utils
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"

# Configuration
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Email functionality
lettre = "0.11"
imap = "2.4"
native-tls = "0.2"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }